# rpkbin

./: LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: assistant_context.md
docs/cfg/: cfg.md  cfg_zh.md
docs/codegen/: codegen.md  codegen_zh.md  frontend_integration_zh.md  hir.md  hir_zh.md  lir.md  lir_zh.md  status.md  status_zh.md
docs/excel_extractor/: excel_extractor.md  excel_extractor_zh.md
docs/job_manager/: job_manager.md  job_manager_zh.md
docs/mapbv/: mapbv.md  mapbv_zh.md
docs/numbv/: numbv.md  numbv_zh.md
docs/utils/: stage_tracker.md  stage_tracker_zh.md  text_diff.md  text_diff_zh.md
docs/wave/: wave.md  wave_zh.md
rpkbin/: __init__.py  mapbv.py
rpkbin/cfg/: __init__.py  analysis.py  block.py  cfg.py  diff.py  fsm.py  mcu.py  program.py
rpkbin/codegen/: AGENTS.md  __init__.py  asm.py  cegis.py  demo.py  hir.py  hir_validate.py  ir.py  isel.py  lir.py  lower.py  matcher.py  patterns.py  pipeline.py  region_semantics.py  register_alloc.py  rewrite.py  target.py  toy_target.py
rpkbin/excel_extractor/: __init__.py  matcher.py  normalizer.py  result.py  template.py  types.py
rpkbin/job_manager/: __init__.py  cmd_job.py  func_job.py  job.py  manager.py
rpkbin/numbv/: __init__.py  _backend.py  core.py
rpkbin/utils/: __init__.py  stage_tracker.py  text_diff.py
rpkbin/wave/: __init__.py  _util.py  cli.py  hook.py  job.py  parser.py  pty_job.py  runner.py  session.py
tests/cfg/: test_analysis.py  test_block.py  test_cfg.py  test_diff.py  test_fsm.py  test_mcu.py  test_program.py
(+50 files in other folders)
